@@ -51,6 +51,9 @@ debhelper (10.3) UNRELEASED; urgency=medium
     the module can no longer do anything.
   * dh_installman.1: Improve the manpage to clarify the scope of
     dh_installman and provide an examples.  (Closes: LP: #184156)
+  * makefile.pm: Disable parallel installation if libtool is present to
+    avoid a race-condition in automake when using libtool.
+    (Closes: #861627)
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
